@@ -1,12 +1,19 @@
 {
-  "timestamp" : "2022-06-27T08:09:35Z",
+  "timestamp" : "2022-06-28T00:40:10Z",
   "count_outdated" : 81,
   "uniques_outdated" : 23,
-  "count" : 82,
-  "uniques" : 24,
+  "count" : 83,
+  "uniques" : 25,
   "views" : [
     {
       "timestamp": "2022-06-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
