@@ -1,3 +1,10 @@
+2022-06-28T00:40:10Z:
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 23 81 / 24 82
+* notice: next accum: outdated-unq outdated-all / unq all: 23 81 / 25 83
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-27]
+
 2022-06-27T08:09:35Z:
 * notice: last 14d: unq all: 1 1
 * notice: prev accum: outdated-unq outdated-all / unq all: 22 80 / 24 82
